<resources>
    <string name="app_name">LokJav</string>
    <string name="default_upload_site">http://pancanaka.net/gpstracker/updatelocation.php</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="track_on">Tracking!</string>
    <string name="track_off">!Tracking</string>
    <string name="username">Username</string>
    <string name="satu_menit">Satu menit</string>
    <string name="tiga_menit">Tiga menit</string>
    <string name="lima_menit">Lima menit</string>
    <string name="frekuensi">Frekuensi</string>
    <string name="harus_restart">Harus stop tracking dulu</string>
    <string name="google_app_id">377448675651</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gallery">Gallery</string>
</resources>
